@@ -9,6 +9,7 @@ kadnode (1.0) UNRELEASED; urgency=low
   * fix: listening peer discovery socket did not apply --ifce
   * increase maximum number of exported good peers to 150
   * allow DNS interface to return multiple IP addresses
+  * allow DNS interface to handle service location records (SRV)
   * increase maximum number of addresses to be returned
     at once by every interface to 32 (cmd, nss, dns)
   * make local peer discovery a compile time option
